--- a/WindowsFormsApp1/BLOCKMONEYPIM.csproj
+++ b/WindowsFormsApp1/BLOCKMONEYPIM.csproj
@@ -135,6 +135,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Backup banco de dados\Pim.bak" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
