--- a/WindowsFormsApp1/BLOCKMONEYPIM.csproj
+++ b/WindowsFormsApp1/BLOCKMONEYPIM.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Controller\ConectaSQL.cs" />
     <Compile Include="Modelo\Consultor.cs" />
+    <Compile Include="Modelo\CriptoMoedas.cs" />
     <Compile Include="View\FormBackup.cs">
       <SubType>Form</SubType>
     </Compile>
